momentuHMM 1.5.3 2021-06-08
-----------------
NEW FEATURES

* 'return' argument added to plotStationary function for returning stationary probabilities, standards errors, and confidence intervals as a list

CHANGES

* data stream names can no longer be 'beta', 'delta', 'pi', 'g0', or 'theta'

* data stream names can no longer begin with 'beta', 'delta', 'g0', or 'theta'

* added additional checks for unused arguments passed down from a calling function (e.g. fitHMM, prepData); these were previously ignored

* added additional checks for undefined data stream or parameter names in common list arguments (e.g. DM, workBounds, userBounds); these were previously ignored

* the following packages have been moved to 'Suggests' and are now used conditionally: geosphere and mitools. If any of these are packages needed, users will be prompted to install.


momentuHMM 1.5.2 2021-01-06
-----------------
NEW FEATURES

* Approximate individual-level random effects estimation for the state transition probabilities based on Burnham & White (2002) can now be implemented via the randomEffects function

* ncores argument added to simData and simHierData for simulating individual tracks in parallel

CHANGES

* Viterbi algorithm for discrete random effect models (with mixtures>1) now uses individual mixture probabilities instead of overall mixture probabilities

* plotPR now uses car::qqPlot for pseudo-residual qq-plots

* the following packages have been moved to 'Suggests' and are now used conditionally: BB, conicfit, dplyr, expm, ggmap, ggplot2, lubridate, magrittr, matrixcalc, moveHMM, raster, and scatterplot3d. If any of these are packages needed, users will be prompted to install.

* suppress 'Unknown or uninitialised column' warning in crawlWrap when obsData is an sf object

* removed initial SANN optimization when using retryFits in crawlWrap

* reduced worker memory pressure when running crawlWrap or MIfitHMM in parallel
