@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.5.3
-Date: 2021-06-08
+Date: 2021-06-09
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
