@@ -1,4 +1,4 @@
-momentuHMM 1.5.3 2021-06-08
+momentuHMM 1.5.3 2021-06-09
 -----------------
 NEW FEATURES
 
@@ -15,6 +15,10 @@ CHANGES
 * added additional checks for undefined data stream or parameter names in common list arguments (e.g. DM, workBounds, userBounds); these were previously ignored
 
 * the following packages have been moved to 'Suggests' and are now used conditionally: geosphere and mitools. If any of these are packages needed, users will be prompted to install.
+
+BUG FIXES
+
+* In fitHMM and MIfitHMM, an error is now triggered if a covariate (e.g. 'cov1') used in formula, formulaDelta, formulaPi, or DM is missing from the data and a variable with the same name (e.g. 'cov1') exists in the (global) environment. In momentuHMM <=1.5.2, internal calls to stats::model.matrix(formula, data) with missing covariates in the data would attempt to use the (global) environment variable with no warning or error, which could be problematic.
 
 
 momentuHMM 1.5.2 2021-01-06
